# krystalview-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/krystalview_mcp/: __init__.py  server.py
