[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krystalview-mcp"
version = "0.1.1"
description = "KrystalView MCP Server — AI agent access to website analytics, session replay, friction scoring, and anomaly detection."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "KrystalView", email = "support@krystalview.com" }]
keywords = ["mcp", "analytics", "krystalview", "ai", "session-replay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
krystalview-mcp = "krystalview_mcp.server:main"

[project.urls]
Homepage = "https://krystalview.com"
Documentation = "https://docs.krystalview.com/integrations/mcp"
Repository = "https://github.com/McSlaine/krystalview-mcp"
